google-form-replica

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,37 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-color: #f0ebf8;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+h1, h3, h5 {
+    margin-top: 0;
+}
+
+.container {
+    background-color: white;
+    padding: 4%;
+    margin-top: 2%;
+    border-radius: 8px;
+}
+
+small {
+    color: red;
+}
+
+select {
+    height: 8vh;
+    padding: 2%;
+    font-size: 1.1em;
+}
+
+option {
+    font-size: 1.1em;
+}
+
+input[type=text] {
+    width: 100%;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid black;
+}
